--- a/CaRiaco/RegimeShiftNotebooks/PLOT_bathymetry_map.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/PLOT_bathymetry_map.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,70 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th></th><th scope=col>x</th><th scope=col>y</th><th scope=col>z</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>-67.99167</td><td>12.99167 </td><td>-2542    </td></tr>\n",
-       "\t<tr><th scope=row>101</th><td>-66.32500</td><td>12.99167 </td><td>-5017    </td></tr>\n",
-       "\t<tr><th scope=row>201</th><td>-64.65833</td><td>12.99167 </td><td>-3311    </td></tr>\n",
-       "\t<tr><th scope=row>301</th><td>-67.99167</td><td>12.97500 </td><td>-2408    </td></tr>\n",
-       "\t<tr><th scope=row>401</th><td>-66.32500</td><td>12.97500 </td><td>-5021    </td></tr>\n",
-       "\t<tr><th scope=row>501</th><td>-64.65833</td><td>12.97500 </td><td>-3283    </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|lll}\n",
-       "  & x & y & z\\\\\n",
-       "\\hline\n",
-       "\t1 & -67.99167 & 12.99167  & -2542    \\\\\n",
-       "\t101 & -66.32500 & 12.99167  & -5017    \\\\\n",
-       "\t201 & -64.65833 & 12.99167  & -3311    \\\\\n",
-       "\t301 & -67.99167 & 12.97500  & -2408    \\\\\n",
-       "\t401 & -66.32500 & 12.97500  & -5021    \\\\\n",
-       "\t501 & -64.65833 & 12.97500  & -3283    \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| <!--/--> | x | y | z | \n",
-       "|---|---|---|---|---|---|\n",
-       "| 1 | -67.99167 | 12.99167  | -2542     | \n",
-       "| 101 | -66.32500 | 12.99167  | -5017     | \n",
-       "| 201 | -64.65833 | 12.99167  | -3311     | \n",
-       "| 301 | -67.99167 | 12.97500  | -2408     | \n",
-       "| 401 | -66.32500 | 12.97500  | -5021     | \n",
-       "| 501 | -64.65833 | 12.97500  | -3283     | \n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "    x         y        z    \n",
-       "1   -67.99167 12.99167 -2542\n",
-       "101 -66.32500 12.99167 -5017\n",
-       "201 -64.65833 12.99167 -3311\n",
-       "301 -67.99167 12.97500 -2408\n",
-       "401 -66.32500 12.97500 -5021\n",
-       "501 -64.65833 12.97500 -3283"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "head(fillbf)"
+    "#head(fillbf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,11 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave('PLOTS/BathyMap01.pdf', width=8, height= 8)"
+    "ggsave('PLOTS/BathyMap01.png', width=8, height= 8)"
    ]
   },
   {
