--- a/CaRiaco/RegimeShiftNotebooks/HPLC_Pinckney/PLOT_FunctionalGroupBOXPLOT.R.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/HPLC_Pinckney/PLOT_FunctionalGroupBOXPLOT.R.ipynb
@@ -359,6 +359,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -650,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1257,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>spec</th><th scope=col>value_int</th><th scope=col>depint_sum</th><th scope=col>depint_sum_rounded</th><th scope=col>percent</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Cyanobacteria      </td><td> 226.1665          </td><td> 226.1665          </td><td> 226.17            </td><td>0.06477820         </td></tr>\n",
+       "\t<tr><td>Diatoms_Hapto1     </td><td>1616.8173          </td><td>1616.8173          </td><td>1616.82            </td><td>0.46308593         </td></tr>\n",
+       "\t<tr><td>Dinoflagellates    </td><td> 115.4216          </td><td> 115.4216          </td><td> 115.42            </td><td>0.03305885         </td></tr>\n",
+       "\t<tr><td>Haptophytes        </td><td>1013.0002          </td><td>1013.0002          </td><td>1013.00            </td><td>0.29014170         </td></tr>\n",
+       "\t<tr><td>Others (Pr,Cry,Chl)</td><td> 519.9925          </td><td> 519.9925          </td><td> 519.99            </td><td>0.14893532         </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllll}\n",
+       " spec & value\\_int & depint\\_sum & depint\\_sum\\_rounded & percent\\\\\n",
+       "\\hline\n",
+       "\t Cyanobacteria       &  226.1665           &  226.1665           &  226.17             & 0.06477820         \\\\\n",
+       "\t Diatoms\\_Hapto1      & 1616.8173             & 1616.8173             & 1616.82               & 0.46308593           \\\\\n",
+       "\t Dinoflagellates     &  115.4216           &  115.4216           &  115.42             & 0.03305885         \\\\\n",
+       "\t Haptophytes         & 1013.0002           & 1013.0002           & 1013.00             & 0.29014170         \\\\\n",
+       "\t Others (Pr,Cry,Chl) &  519.9925           &  519.9925           &  519.99             & 0.14893532         \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| spec | value_int | depint_sum | depint_sum_rounded | percent |\n",
+       "|---|---|---|---|---|\n",
+       "| Cyanobacteria       |  226.1665           |  226.1665           |  226.17             | 0.06477820          |\n",
+       "| Diatoms_Hapto1      | 1616.8173           | 1616.8173           | 1616.82             | 0.46308593          |\n",
+       "| Dinoflagellates     |  115.4216           |  115.4216           |  115.42             | 0.03305885          |\n",
+       "| Haptophytes         | 1013.0002           | 1013.0002           | 1013.00             | 0.29014170          |\n",
+       "| Others (Pr,Cry,Chl) |  519.9925           |  519.9925           |  519.99             | 0.14893532          |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  spec                value_int depint_sum depint_sum_rounded percent   \n",
+       "1 Cyanobacteria        226.1665  226.1665   226.17            0.06477820\n",
+       "2 Diatoms_Hapto1      1616.8173 1616.8173  1616.82            0.46308593\n",
+       "3 Dinoflagellates      115.4216  115.4216   115.42            0.03305885\n",
+       "4 Haptophytes         1013.0002 1013.0002  1013.00            0.29014170\n",
+       "5 Others (Pr,Cry,Chl)  519.9925  519.9925   519.99            0.14893532"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "NewComb_FT_sum <- aggregate(value_int ~  spec, NewComb_FT_ALL, sum)\n",
+    "NewComb_FT_sum$depint_sum <- NewComb_FT_sum$value_int\n",
+    "NewComb_FT_sum$depint_sum_rounded <- round(NewComb_FT_sum$depint_sum, digits = 2)\n",
+    "\n",
+    "TOT <- sum(NewComb_FT_sum$depint_sum)\n",
+    "NewComb_FT_sum$percent <- NewComb_FT_sum$depint_sum/TOT\n",
+    "\n",
+    "\n",
+    "NewComb_FT_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1331,6 +1404,54 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>spec</th><th scope=col>meansum</th><th scope=col>percent</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Diatoms_Hapto1     </td><td>29.716116          </td><td>0.45856012         </td></tr>\n",
+       "\t<tr><td>Haptophytes        </td><td>18.890668          </td><td>0.29150872         </td></tr>\n",
+       "\t<tr><td>Others (Pr,Cry,Chl)</td><td> 9.775773          </td><td>0.15085349         </td></tr>\n",
+       "\t<tr><td>Cyanobacteria      </td><td> 4.257601          </td><td>0.06570057         </td></tr>\n",
+       "\t<tr><td>Dinoflagellates    </td><td> 2.162939          </td><td>0.03337710         </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       " spec & meansum & percent\\\\\n",
+       "\\hline\n",
+       "\t Diatoms\\_Hapto1      & 29.716116             & 0.45856012           \\\\\n",
+       "\t Haptophytes         & 18.890668           & 0.29150872         \\\\\n",
+       "\t Others (Pr,Cry,Chl) &  9.775773           & 0.15085349         \\\\\n",
+       "\t Cyanobacteria       &  4.257601           & 0.06570057         \\\\\n",
+       "\t Dinoflagellates     &  2.162939           & 0.03337710         \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| spec | meansum | percent |\n",
+       "|---|---|---|\n",
+       "| Diatoms_Hapto1      | 29.716116           | 0.45856012          |\n",
+       "| Haptophytes         | 18.890668           | 0.29150872          |\n",
+       "| Others (Pr,Cry,Chl) |  9.775773           | 0.15085349          |\n",
+       "| Cyanobacteria       |  4.257601           | 0.06570057          |\n",
+       "| Dinoflagellates     |  2.162939           | 0.03337710          |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  spec                meansum   percent   \n",
+       "1 Diatoms_Hapto1      29.716116 0.45856012\n",
+       "2 Haptophytes         18.890668 0.29150872\n",
+       "3 Others (Pr,Cry,Chl)  9.775773 0.15085349\n",
+       "4 Cyanobacteria        4.257601 0.06570057\n",
+       "5 Dinoflagellates      2.162939 0.03337710"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1340,7 +1461,11 @@
     "NewComb_FT_means_sum <- NewComb_FT_means %>%\n",
     "    group_by(spec) %>%\n",
     "    summarise(meansum = sum(depint_mean)) %>%\n",
-    "    arrange(desc(meansum))"
+    "    arrange(desc(meansum))\n",
+    "\n",
+    "total <- sum(NewComb_FT_means_sum$meansum)\n",
+    "NewComb_FT_means_sum$percent <- NewComb_FT_means_sum$meansum/total\n",
+    "NewComb_FT_means_sum"
    ]
   },
   {
