--- a/CaRiaco/RegimeShiftNotebooks/MLD_PrevPubData/ReadData_MLD_euphoticDepth.ipynb
+++ b/CaRiaco/RegimeShiftNotebooks/MLD_PrevPubData/ReadData_MLD_euphoticDepth.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,15 +51,14 @@
       ],
       "text/markdown": [
        "\n",
-       "X | CruiseID | Date | month | days | press | depth | lat | lon | sigma_t | sigma_0 | potemp | sal | temp | beam_att | beam_cp | fluor_chla | \n",
-       "|---|---|---|---|---|---|\n",
-       "| 1          | 93HG_001   | 1995-11-08 | 11         | 311        |  2.011     |  2         | 10.5       | -64.67     | 23.764     | 23.764     | 27.522     | 36.612     | 27.522     | NA         | NA         | NA         | \n",
-       "| 2          | 93HG_001   | 1995-11-08 | 11         | 311        |  4.023     |  4         | 10.5       | -64.67     | 23.775     | 23.775     | 27.488     | 36.612     | 27.489     | NA         | NA         | NA         | \n",
-       "| 3          | 93HG_001   | 1995-11-08 | 11         | 311        |  6.034     |  6         | 10.5       | -64.67     | 23.782     | 23.782     | 27.464     | 36.614     | 27.465     | NA         | NA         | NA         | \n",
-       "| 4          | 93HG_001   | 1995-11-08 | 11         | 311        |  8.046     |  8         | 10.5       | -64.67     | 23.786     | 23.787     | 27.456     | 36.613     | 27.458     | NA         | NA         | NA         | \n",
-       "| 5          | 93HG_001   | 1995-11-08 | 11         | 311        | 10.057     | 10         | 10.5       | -64.67     | 23.787     | 23.787     | 27.452     | 36.613     | 27.454     | NA         | NA         | NA         | \n",
-       "| 6          | 93HG_001   | 1995-11-08 | 11         | 311        | 12.069     | 12         | 10.5       | -64.67     | 23.787     | 23.788     | 27.449     | 36.612     | 27.452     | NA         | NA         | NA         | \n",
-       "\n",
+       "| X | CruiseID | Date | month | days | press | depth | lat | lon | sigma_t | sigma_0 | potemp | sal | temp | beam_att | beam_cp | fluor_chla |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1          | 93HG_001   | 1995-11-08 | 11         | 311        |  2.011     |  2         | 10.5       | -64.67     | 23.764     | 23.764     | 27.522     | 36.612     | 27.522     | NA         | NA         | NA         |\n",
+       "| 2          | 93HG_001   | 1995-11-08 | 11         | 311        |  4.023     |  4         | 10.5       | -64.67     | 23.775     | 23.775     | 27.488     | 36.612     | 27.489     | NA         | NA         | NA         |\n",
+       "| 3          | 93HG_001   | 1995-11-08 | 11         | 311        |  6.034     |  6         | 10.5       | -64.67     | 23.782     | 23.782     | 27.464     | 36.614     | 27.465     | NA         | NA         | NA         |\n",
+       "| 4          | 93HG_001   | 1995-11-08 | 11         | 311        |  8.046     |  8         | 10.5       | -64.67     | 23.786     | 23.787     | 27.456     | 36.613     | 27.458     | NA         | NA         | NA         |\n",
+       "| 5          | 93HG_001   | 1995-11-08 | 11         | 311        | 10.057     | 10         | 10.5       | -64.67     | 23.787     | 23.787     | 27.452     | 36.613     | 27.454     | NA         | NA         | NA         |\n",
+       "| 6          | 93HG_001   | 1995-11-08 | 11         | 311        | 12.069     | 12         | 10.5       | -64.67     | 23.787     | 23.788     | 27.449     | 36.612     | 27.452     | NA         | NA         | NA         |\n",
        "\n"
       ],
       "text/plain": [
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,15 +179,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read MLD depth file\n",
-    "MLD_2019 <- read.csv(\"Upwelling_Final-Feb 2018_edit.csv\")\n",
+    "MLD_2019 <- read.csv(\"Upwelling_Final-Feb 2018_edit_incISO.csv\", sep=';', dec=',')\n",
     "\n",
     "# read Date column\n",
-    "MLD_2019$Date <- as.Date(MLD_2019$Date, format=\"%m/%d/%y\")\n",
+    "MLD_2019$Date <- as.Date(MLD_2019$Date, format=\"%m.%d.%y\")\n",
     "\n",
     "# get just month and year for merging later\n",
     "MLD_2019$DateMonth <- format(MLD_2019$Date, format=\"%Y-%m\")"
@@ -196,16 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'data.frame':\t229 obs. of  3 variables:\n",
+      "'data.frame':\t230 obs. of  5 variables:\n",
       " $ Date     : Date, format: \"1995-11-01\" \"1995-12-01\" ...\n",
       " $ MLD      : num  24.14 18.1 10.06 8.05 10.06 ...\n",
+      " $ X21degC  : int  130 114 102 94 48 48 30 81 108 86 ...\n",
+      " $ X22degC  : int  118 94 62 66 24 26 8 39 93 48 ...\n",
       " $ DateMonth: chr  \"1995-11\" \"1995-12\" \"1996-01\" \"1996-02\" ...\n"
      ]
     }
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'data.frame':\t239 obs. of  9 variables:\n",
+      "'data.frame':\t240 obs. of  11 variables:\n",
       " $ DateMonth: chr  \"1995-11\" \"1995-12\" \"1996-01\" \"1996-02\" ...\n",
       " $ CruiseID : Factor w/ 198 levels \"93HG_001\",\"93HG_002\",..: 1 2 3 4 5 6 7 8 9 10 ...\n",
       " $ Date.x   : Date, format: \"1995-11-08\" \"1995-12-13\" ...\n",
@@ -241,7 +242,9 @@
       " $ MLD.x    : int  NA NA 36 28 28 32 12 21 14 22 ...\n",
       " $ Date.y   : Date, format: NA NA ...\n",
       " $ Date     : Date, format: \"1995-11-01\" \"1995-12-01\" ...\n",
-      " $ MLD.y    : num  24.14 18.1 10.06 8.05 10.06 ...\n"
+      " $ MLD.y    : num  24.14 18.1 10.06 8.05 10.06 ...\n",
+      " $ X21degC  : int  130 114 102 94 48 48 30 81 108 86 ...\n",
+      " $ X22degC  : int  118 94 62 66 24 26 8 39 93 48 ...\n"
      ]
     }
    ],
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'data.frame':\t241 obs. of  15 variables:\n",
+      "'data.frame':\t241 obs. of  17 variables:\n",
       " $ DateMonth: chr  \"1995-11\" \"1995-12\" \"1996-01\" \"1996-02\" ...\n",
       " $ CruiseID : Factor w/ 198 levels \"93HG_001\",\"93HG_002\",..: 1 2 3 4 5 6 7 8 9 10 ...\n",
       " $ Date.x   : Date, format: \"1995-11-08\" \"1995-12-13\" ...\n",
@@ -331,6 +334,8 @@
       " $ Date.y   : Date, format: NA NA ...\n",
       " $ Date     : Date, format: \"1995-11-01\" \"1995-12-01\" ...\n",
       " $ MLD.y    : num  24.14 18.1 10.06 8.05 10.06 ...\n",
+      " $ X21degC  : int  130 114 102 94 48 48 30 81 108 86 ...\n",
+      " $ X22degC  : int  118 94 62 66 24 26 8 39 93 48 ...\n",
       " $ Campaign : Factor w/ 131 levels \"\",\"C118\",\"C119\",..: NA NA NA NA NA NA NA NA NA NA ...\n",
       " $ Fecha    : Factor w/ 131 levels \"\",\"1/1/98\",\"1/1/99\",..: NA NA NA NA NA NA NA NA NA NA ...\n",
       " $ X0.10.   : num  NA NA NA NA NA NA NA NA NA NA ...\n",
@@ -353,24 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# clean up data frame\n",
     "ALLDATA <- data.frame(CruiseID = MEZ$CruiseID, Date = MEZ$Date.x, MLD2015 = MEZ$MLD.x,\n",
-    "                     MLD2019 = MEZ$MLD.y, x0.1 = MEZ$X0.10., x1 = MEZ$X1., x10 =MEZ$X10.)\n",
+    "                     MLD2019 = MEZ$MLD.y, x0.1 = MEZ$X0.10., x1 = MEZ$X1., x10 =MEZ$X10., '21degC'=MEZ$X21degC, '22degC'=MEZ$X22degC)\n",
     "ALLDATA_filt <- ALLDATA[complete.cases(ALLDATA$CruiseID),]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write CSV in R\n",
-    "write.csv(ALLDATA_filt, file = \"../DATA_processed/MLD2EuZ.csv\")"
+    "write.csv(ALLDATA_filt, file = \"../DATA_processed/MLD2EuZ_2.csv\")"
    ]
   },
   {
