Updates to PhytoMFTM, meeting August

--- a/CaRiaco/ForManuscriptNotebooks/MIXING/CreateMIXINGforcing_01.R.ipynb
+++ b/CaRiaco/ForManuscriptNotebooks/MIXING/CreateMIXINGforcing_01.R.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,54 +85,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A data.frame: 6 × 10</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>X</th><th scope=col>CruiseID</th><th scope=col>Date</th><th scope=col>MLD2015</th><th scope=col>MLD2019</th><th scope=col>x0.1</th><th scope=col>x1</th><th scope=col>x10</th><th scope=col>X21degC</th><th scope=col>X22degC</th></tr>\n",
-       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;date&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
+       "<thead><tr><th scope=col>X</th><th scope=col>CruiseID</th><th scope=col>Date</th><th scope=col>MLD2015</th><th scope=col>MLD2019</th><th scope=col>x0.1</th><th scope=col>x1</th><th scope=col>x10</th><th scope=col>X21degC</th><th scope=col>X22degC</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>1</td><td>93HG_001</td><td>1995-11-08</td><td>NA</td><td>24.138</td><td>NA</td><td>NA</td><td>NA</td><td>130</td><td>118</td></tr>\n",
-       "\t<tr><td>2</td><td>93HG_002</td><td>1995-12-13</td><td>NA</td><td>18.103</td><td>NA</td><td>NA</td><td>NA</td><td>114</td><td> 94</td></tr>\n",
-       "\t<tr><td>3</td><td>93HG_003</td><td>1996-01-12</td><td>36</td><td>10.057</td><td>NA</td><td>NA</td><td>NA</td><td>102</td><td> 62</td></tr>\n",
-       "\t<tr><td>4</td><td>93HG_004</td><td>1996-02-13</td><td>28</td><td> 8.046</td><td>NA</td><td>NA</td><td>NA</td><td> 94</td><td> 66</td></tr>\n",
-       "\t<tr><td>5</td><td>93HG_005</td><td>1996-03-13</td><td>28</td><td>10.057</td><td>NA</td><td>NA</td><td>NA</td><td> 48</td><td> 24</td></tr>\n",
-       "\t<tr><td>6</td><td>93HG_006</td><td>1996-04-16</td><td>32</td><td> 7.040</td><td>NA</td><td>NA</td><td>NA</td><td> 48</td><td> 26</td></tr>\n",
+       "\t<tr><td>1         </td><td>93HG_001  </td><td>1995-11-08</td><td>NA        </td><td>24.138    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>130       </td><td>118       </td></tr>\n",
+       "\t<tr><td>2         </td><td>93HG_002  </td><td>1995-12-13</td><td>NA        </td><td>18.103    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>114       </td><td> 94       </td></tr>\n",
+       "\t<tr><td>3         </td><td>93HG_003  </td><td>1996-01-12</td><td>36        </td><td>10.057    </td><td>NA        </td><td>NA        </td><td>NA        </td><td>102       </td><td> 62       </td></tr>\n",
+       "\t<tr><td>4         </td><td>93HG_004  </td><td>1996-02-13</td><td>28        </td><td> 8.046    </td><td>NA        </td><td>NA        </td><td>NA        </td><td> 94       </td><td> 66       </td></tr>\n",
+       "\t<tr><td>5         </td><td>93HG_005  </td><td>1996-03-13</td><td>28        </td><td>10.057    </td><td>NA        </td><td>NA        </td><td>NA        </td><td> 48       </td><td> 24       </td></tr>\n",
+       "\t<tr><td>6         </td><td>93HG_006  </td><td>1996-04-16</td><td>32        </td><td> 7.040    </td><td>NA        </td><td>NA        </td><td>NA        </td><td> 48       </td><td> 26       </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 6 × 10\n",
        "\\begin{tabular}{r|llllllllll}\n",
        " X & CruiseID & Date & MLD2015 & MLD2019 & x0.1 & x1 & x10 & X21degC & X22degC\\\\\n",
-       " <int> & <fct> & <date> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int>\\\\\n",
        "\\hline\n",
-       "\t 1 & 93HG\\_001 & 1995-11-08 & NA & 24.138 & NA & NA & NA & 130 & 118\\\\\n",
-       "\t 2 & 93HG\\_002 & 1995-12-13 & NA & 18.103 & NA & NA & NA & 114 &  94\\\\\n",
-       "\t 3 & 93HG\\_003 & 1996-01-12 & 36 & 10.057 & NA & NA & NA & 102 &  62\\\\\n",
-       "\t 4 & 93HG\\_004 & 1996-02-13 & 28 &  8.046 & NA & NA & NA &  94 &  66\\\\\n",
-       "\t 5 & 93HG\\_005 & 1996-03-13 & 28 & 10.057 & NA & NA & NA &  48 &  24\\\\\n",
-       "\t 6 & 93HG\\_006 & 1996-04-16 & 32 &  7.040 & NA & NA & NA &  48 &  26\\\\\n",
+       "\t 1          & 93HG\\_001 & 1995-11-08 & NA         & 24.138     & NA         & NA         & NA         & 130        & 118       \\\\\n",
+       "\t 2          & 93HG\\_002 & 1995-12-13 & NA         & 18.103     & NA         & NA         & NA         & 114        &  94       \\\\\n",
+       "\t 3          & 93HG\\_003 & 1996-01-12 & 36         & 10.057     & NA         & NA         & NA         & 102        &  62       \\\\\n",
+       "\t 4          & 93HG\\_004 & 1996-02-13 & 28         &  8.046     & NA         & NA         & NA         &  94        &  66       \\\\\n",
+       "\t 5          & 93HG\\_005 & 1996-03-13 & 28         & 10.057     & NA         & NA         & NA         &  48        &  24       \\\\\n",
+       "\t 6          & 93HG\\_006 & 1996-04-16 & 32         &  7.040     & NA         & NA         & NA         &  48        &  26       \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 6 × 10\n",
-       "\n",
-       "| X &lt;int&gt; | CruiseID &lt;fct&gt; | Date &lt;date&gt; | MLD2015 &lt;int&gt; | MLD2019 &lt;dbl&gt; | x0.1 &lt;dbl&gt; | x1 &lt;dbl&gt; | x10 &lt;dbl&gt; | X21degC &lt;int&gt; | X22degC &lt;int&gt; |\n",
+       "| X | CruiseID | Date | MLD2015 | MLD2019 | x0.1 | x1 | x10 | X21degC | X22degC |\n",
        "|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | 93HG_001 | 1995-11-08 | NA | 24.138 | NA | NA | NA | 130 | 118 |\n",
-       "| 2 | 93HG_002 | 1995-12-13 | NA | 18.103 | NA | NA | NA | 114 |  94 |\n",
-       "| 3 | 93HG_003 | 1996-01-12 | 36 | 10.057 | NA | NA | NA | 102 |  62 |\n",
-       "| 4 | 93HG_004 | 1996-02-13 | 28 |  8.046 | NA | NA | NA |  94 |  66 |\n",
-       "| 5 | 93HG_005 | 1996-03-13 | 28 | 10.057 | NA | NA | NA |  48 |  24 |\n",
-       "| 6 | 93HG_006 | 1996-04-16 | 32 |  7.040 | NA | NA | NA |  48 |  26 |\n",
+       "| 1          | 93HG_001   | 1995-11-08 | NA         | 24.138     | NA         | NA         | NA         | 130        | 118        |\n",
+       "| 2          | 93HG_002   | 1995-12-13 | NA         | 18.103     | NA         | NA         | NA         | 114        |  94        |\n",
+       "| 3          | 93HG_003   | 1996-01-12 | 36         | 10.057     | NA         | NA         | NA         | 102        |  62        |\n",
+       "| 4          | 93HG_004   | 1996-02-13 | 28         |  8.046     | NA         | NA         | NA         |  94        |  66        |\n",
+       "| 5          | 93HG_005   | 1996-03-13 | 28         | 10.057     | NA         | NA         | NA         |  48        |  24        |\n",
+       "| 6          | 93HG_006   | 1996-04-16 | 32         |  7.040     | NA         | NA         | NA         |  48        |  26        |\n",
        "\n"
       ],
       "text/plain": [
@@ -173,7 +165,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
